nop bai tap buoi 11

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   </span>
                   <input type="search" placeholder="Search" />
                   <span class="cart-ic">
-                    <img src="img/cart_icon.jpg" alt="" />
+                    <img src="img/bag_cart_ecommerce_shop_icon.png" alt="" />
                   </span>
                 </form>
               </li>
