nop bai tap buoi 11

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <i class="fa-solid fa-magnifying-glass"> </i>
                   </span>
                   <input type="search" placeholder="Search" />
-                  <span class="cart-ic">
+                  <div class="cart-ic">
                     <img src="img/bag_cart_ecommerce_shop_icon.png" alt="" />
-                  </span>
+                  </div>
                 </form>
               </li>
             </ul>
